--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "netlify dev",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "launch:dry": "cross-env DRY_RUN=1 node scripts/launch-now.mjs",
+    "launch:now": "cross-env DRY_RUN=0 node scripts/launch-now.mjs",
+    "preview:one": "node scripts/preview-one.mjs",
+    "extend:dry": "cross-env DRY_RUN=1 node scripts/extend-trials.mjs",
+    "extend:now": "cross-env DRY_RUN=0 node scripts/extend-trials.mjs"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -24,10 +30,13 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "netlify-cli": "^23.1.4",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5"
   }
 }
