Added favicons, updated short and long descriptions

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "launch:now": "cross-env DRY_RUN=0 node scripts/launch-now.mjs",
     "preview:one": "node scripts/preview-one.mjs",
     "extend:dry": "cross-env DRY_RUN=1 node scripts/extend-trials.mjs",
-    "extend:now": "cross-env DRY_RUN=0 node scripts/extend-trials.mjs"
+    "extend:now": "cross-env DRY_RUN=0 node scripts/extend-trials.mjs",
+    "favicons:gen": "node scripts/generate-favicons.mjs"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
@@ -26,17 +27,18 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "favicons": "^7.2.0",
     "globals": "^15.9.0",
     "netlify-cli": "^23.1.4",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5"
+    "vite": "^5.4.2"
   }
 }
